# SFTP-CPP

./: CMakeLists.txt  README.md  instructions.md  sample_file.txt  sftp_client  sftp_server
certs/: gen_certs.sh
certs/keys/: ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  server.crt  server.csr  server.key
include/: common.h  platform.h  ssl_wrapper.h  utils.h
src/client/: client.cpp  client.h  main.cpp
src/common/: ssl_wrapper.cpp  utils.cpp
src/server/: main.cpp  server.cpp  server.h
